Show LUKS crypted partitions on local hard drive in Dolphin

REVIEW: 102529
BUG: 181847